syntax = "proto3";
package proto;

import "defs.proto";

enum DataSet {
  XYZ = 0;
  ZYX = 1;
}

message ImageDataRequest{
    string uuid = 1;
    // DataSet dataset = 2;
    bool perm_data = 2;

    RegionType regionType = 3;
    repeated int32 start = 4;
    repeated int32 count = 5;
}

message ImageDataResponse{
  bytes raw_values_fp32 = 1;
  int32 num_pixels = 2;
}